ios/chrome/browser/ui/toolbar/adaptive/adaptive_toolbar_view_controller.mm
@@ -121,6 +121,13 @@ const CGFloat kTabGridAnimationsTotalDuration = 0.5;
   }
 }
 
+- (void)viewDidLayoutSubviews {
+  [super viewDidLayoutSubviews];
+  // TODO(crbug.com/882723): Remove this call once iPad trait collection
+  // override issue is fixed.
+  [self updateAllButtonsVisibility];
+}
+
 #pragma mark - Public
 
 - (ToolbarToolsMenuButton*)toolsMenuButton {
